--- a/package.json
+++ b/package.json
@@ -9,9 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.0.4",
+    "@heroicons/react": "^2.1.3",
+    "axios": "^1.7.2",
+    "axios-cookiejar-support": "^5.0.2",
+    "child_process": "^1.0.2",
+    "crypto": "^1.0.1",
+    "fs-extra": "^11.2.0",
+    "inquirer": "^9.2.23",
+    "next": "14.2.3",
+    "node-fetch": "^3.3.2",
+    "protobufjs": "^7.3.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "tough-cookie": "^4.1.4",
+    "xmldom": "^0.6.0",
+    "xmldom-qsa": "^1.1.3",
+    "xpath": "^0.0.34",
+    "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
     "postcss": "^8",
