--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.1.3",
+    "audio-decode": "^2.2.0",
     "axios": "^1.7.2",
     "axios-cookiejar-support": "^5.0.2",
+    "bpm-detective": "^2.0.5",
     "child_process": "^1.0.2",
     "crypto": "^1.0.1",
     "fs-extra": "^11.2.0",
