--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@heroicons/react": "^2.1.3",
     "axios": "^1.7.2",
     "axios-cookiejar-support": "^5.0.2",
+    "canvas": "^2.11.2",
     "child_process": "^1.0.2",
     "crypto": "^1.0.1",
     "fs-extra": "^11.2.0",
+    "image-js": "^0.35.5",
     "inquirer": "^9.2.23",
     "next": "14.2.3",
     "node-fetch": "^3.3.2",
